refacot: refatoração do auth